# dcf-ai-calculator

./: .gitignore  AGENTS.md  AI_STRATEGY.md  ARCHITECTURE.md  BRANCH_INFO.md  FRAMEWORK_COMPARISON.md  MIGRATION_TO_DASH.md  QUICKSTART.md  REACT_VS_PYTHON.md  README.md  app.py  main.py  pyproject.toml  requirements-dash.txt  run.sh  run_dash.sh  yahoofin_api.py
assets/: custom.css
callbacks/: __init__.py  dcf_callbacks.py  fcff_callbacks.py  wacc_callbacks.py
core/: dcf_valuation.py  fcff.py  growth_rates.py  wacc.py
data/: edgar_api.py
docs/: data_sources_apis.md  edgar_fcff_plan.md
layouts/: __init__.py  main_content.py  sidebar.py
src/dcf_calculator/callbacks/: dcf_callbacks.py  fcff_callbacks.py
src/dcf_calculator/core/: __init__.py  formatting.py
src/dcf_calculator/data/: edgar_api.py  edgar_llm_parser.py  models.py  yahoofin_api.py
src/dcf_calculator/layouts/: main_content.py
stlitpages/: __init__.py  mainpage.py
